tests: asegurar import de 'python_api' agregando project root al sys.path en tests/conftest.py; deps: incluir pydantic[email] y python-multipart en requirements para EmailStr y formularios OAuth2.\n\n- Fix ModuleNotFoundError importando 'python_api.main' durante tests.\n- Agregar dependencias faltantes: email-validator (via pydantic[email]) y python-multipart.\n- Confirmado: pytest -q -> 3 passed.\n

--- a/python_api/requirements.txt
+++ b/python_api/requirements.txt
@@ -1,9 +1,10 @@
 fastapi
 uvicorn[standard]
 sqlalchemy
-pydantic
+pydantic[email]
 python-dotenv
 passlib[bcrypt]
 python-jose[cryptography]
 pytest
 httpx
+python-multipart
